fixed dark mode colour issue

--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,4 @@
 :root {
-    --accent-bg: #fff;
     --accent: gray;
 }
 
